--- a/style.css
+++ b/style.css
@@ -70,7 +70,7 @@ p {
 }
 
 .rounded-img {
-  width: 150px;
+  width: 100px;
   border-radius: 50%;
   border: solid white 2px;
 }
@@ -106,6 +106,10 @@ button {
   flex-grow: 1;
   margin: 5px;
   justify-content: center
+}
+
+.rel:hover {
+	box-shadow: 0 0 20px rgba(255,255,255,0.6)
 }
 
 footer {
